# Extending_a_Constrained_Hybrid_Dynamics_Solver_for_Energy-Optimal_Robot_Motions_in_the_Presence_of_S

./: .gitignore  CMakeLists.txt  Makefile  README.md  body_with_friction.xml  main.cpp  notes_meeting_26_10_17.txt  plotting_graphs.ipynb
.ipynb_checkpoints/: plotting_graphs-checkpoint.ipynb
addtional_matlab_code/: Robot_Arm_Inverse_Kinematics.m
addtional_matlab_code/Puma_Simulation/: Puma_Simulation.m
addtional_matlab_code/Uni_jordan/: base.slp  e1.slp  e2.slp  e3.slp  e4.slp  e5.slp  j1.slp  j10.slp  j11.slp  j12.slp  j13.slp  j14.slp  j2.slp  j3.slp  j4.slp  j5.slp  j6.slp  j7.slp  j8.slp  j9.slp  license.txt  robotics.asv
graphs/: 1DOF_robot.xml  3D_Guss.xml  Extended_solver.xml  Friction_vs_applied_force.xml  Full_Extended_solver.xml  Full_Original_solver.xml  LuGre_model.xml  Only_friction_1DOF_robot.xml  Original_solver.xml  Untitled Diagram.xml  acc_experiments.xml  chain.xml  char_curve_full_3D_Guss.xml  container.xml  controlIt.xml  control_experiments.xml  experiments.xml  friction_wo_velocity.xml  iTaSC_control.xml  marker_orientation_arm1.xml  only_friction.xml  run-time_setup.xml  techman_presentation.xml
include/: extended_kinematic_chain.hpp  motion_specification.hpp  solver_vereshchagin.hpp  vereshchagin_with_friction.hpp
src/: Sven_sample_code.cpp  arm_motions_matlab.m  joint_poses.txt  main.cpp  main.cpp.bak  old_main.cpp  solver_vereshchagin.cpp  temp.cpp  vereshchagin_with_friction.cpp
src/Simulation/: Arm_motion_Python.py  arm_motions_matlab.m  joint_poses.txt  plot_acc.txt  plot_acc_true.txt  plot_acc_vs_tau_test.ipynb  plot_control.txt  plot_data.txt  plot_surface.m  plotting_1DOF.py  plotting_1DOF_3D.py  plotting_1DOF_Characteristic_Energy.py  plotting_acc_vs_tau_1.py  plotting_acc_vs_tau_2.py  plotting_control_vs_friction_1.py  plotting_data.py  plotting_data_acc.py  test_files.m
src/Simulation/.ipynb_checkpoints/: plot_acc_vs_tau_test-checkpoint.ipynb
tests/: runtimes.txt  runtimes_RNE.txt  runtimes_extended.txt  runtimes_original.txt
